--- a/index.html
+++ b/index.html
@@ -16,7 +16,49 @@
     <title>Bondi</title>
   </head>
   <body>
-      
+    <nav class="navbar navbar-expand-lg sticky-top">
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <img src="./imgs/logo.png" alt="" />
+        </a>
+        <button
+          class="navbar-toggler text-white fs-2 border shadow-none"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#main"
+          aria-controls="main"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <i class="fa-solid fa-bars text-white"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="main">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0 bg">
+            <li class="nav-item">
+              <a class="nav-link active p-2 p-lg-3" aria-current="page" href="#"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link p-lg-3 p-2" href="#">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link p-lg-3 p-2" href="#">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link p-lg-3 p-2" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link p-lg-3 p-2" href="#">Contact</a>
+            </li>
+          </ul>
+          <div class="search px-3 d-none d-lg-block">
+            <i class="fa-solid fa-magnifying-glass text-green"></i>
+          </div>
+          <a href="#" class="main-btn btn text-black rounded-pill bg-danger">Login</a>
+        </div>
+      </div>
+    </nav>
     <script src="./js/bootstrap.bundle.min.js"></script>
     <script src="./js/all.min.js"></script>
   </body>
