--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <title>Bondi</title>
   </head>
   <body>
+    <!-- Start Nav -->
     <nav class="navbar navbar-expand-lg sticky-top">
       <div class="container">
         <a class="navbar-brand" href="#">
@@ -55,10 +56,83 @@
           <div class="search px-3 d-none d-lg-block">
             <i class="fa-solid fa-magnifying-glass text-green"></i>
           </div>
-          <a href="#" class="main-btn btn text-black rounded-pill bg-danger">Login</a>
+          <a href="#" class="btn main-btn rounded-pill">Login</a>
         </div>
       </div>
     </nav>
+
+    <!-- End Nav -->
+
+    <!-- Start Landing -->
+    <section class="landing d-flex align-items-center justify-content-center">
+      <div class="text-center text-light">
+        <h1 class="fw-light">Taste The Creativity</h1>
+        <p class="fs-6 text-white-50 mb-5">
+          We make awesome graphic and web design
+        </p>
+        <a href="#" class="btn main-btn rounded-pill">Get Started</a>
+      </div>
+    </section>
+    <!-- End Landing -->
+
+    <!-- Start Feature -->
+    <section class="feature text-center py-5">
+      <div class="container">
+        <div class="main-title py-5 position-relative">
+          <img class="mb-4" src="./imgs/title.png" alt="" />
+          <h2>We are Good at</h2>
+          <p class="text-uppercase text-black-50">some of these stuff under</p>
+        </div>
+        <div class="row">
+          <div class="col-md-6 col-lg-4">
+            <div class="feat">
+              <div class="icon-holder position-relative">
+                <i class="fa-solid fa-1 position-absolute bottom-0 number"></i>
+                <i
+                  class="fa-solid fa-pencil fa-3x position-absolute bottom-0 icon"
+                ></i>
+              </div>
+              <h4 class="my-3 text-uppercase">Graphic Design</h4>
+              <p class="text-black-50 lh-lg">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere,
+                recusandae voluptate vel et nihil
+              </p>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="feat">
+              <div class="icon-holder position-relative">
+                <i class="fa-solid fa-2 position-absolute bottom-0 number"></i>
+                <i
+                  class="fa-solid fa-tv fa-3x position-absolute bottom-0 icon"
+                ></i>
+              </div>
+              <h4 class="my-3 text-uppercase">Graphic Design</h4>
+              <p class="text-black-50 lh-lg">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere,
+                recusandae voluptate vel et nihil
+              </p>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="feat">
+              <div class="icon-holder position-relative">
+                <i class="fa-solid fa-3 position-absolute bottom-0 number"></i>
+                <i
+                  class="fa-solid fa-plug fa-3x position-absolute bottom-0 icon"
+                ></i>
+              </div>
+              <h4 class="my-3 text-uppercase">Graphic Design</h4>
+              <p class="text-black-50 lh-lg">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere,
+                recusandae voluptate vel et nihil
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Feature -->
     <script src="./js/bootstrap.bundle.min.js"></script>
     <script src="./js/all.min.js"></script>
   </body>
