--- a/index.html
+++ b/index.html
@@ -200,6 +200,47 @@
       </div>
     </section>
     <!-- End Our Work -->
+
+    <!-- Start Stuff -->
+    <section class="stuff pt-5">
+      <div class="container">
+        <div class="main-title py-5 text-center my-5 position-relative">
+          <img class="mb-4" src="./imgs/title.png" alt="" />
+          <h2>Some Stuff About Us</h2>
+          <p class="text-uppercase text-black-50">The Great Team</p>
+        </div>
+        <p class="describtion text-center mb-5 text-black-50 w-50 mx-auto">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
+          distinctio quidem nisi, ullam velit provident quod optio sed
+          doloremque consectetur tempore minima .
+        </p>
+        <div class="row align-content-center">
+          <div class="col-lg-4 mb-4 text-center text-md-start">
+            <div class="text">
+              <h4>Retina Design</h4>
+              <p class="text-black-50 fs-6">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Aspernatur quo sunt distinctio quae quisquam deleniti fugit .
+              </p>
+              <p class="text-black-50 fs-6">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Eveniet repudiandae obcaecati cum adipisci sint facere provident
+                rerum quam, porro numquam ea doloribus non ex blanditiis.
+              </p>
+              <a href="#" class="btn main-btn rounded-pill text-uppercase">
+                Order Me One</a
+              >
+            </div>
+          </div>
+          <div class="col-lg-8">
+            <div class="image">
+              <img class="img-fluid" src="././imgs/laptop.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Stuff -->
     <script src="./js/bootstrap.bundle.min.js"></script>
     <script src="./js/all.min.js"></script>
   </body>
