--- a/index.html
+++ b/index.html
@@ -241,6 +241,61 @@
       </div>
     </section>
     <!-- End Stuff -->
+    <!-- Start Our Team -->
+    <section class="our-team text-center py-5">
+      <div class="container">
+        <h2 class="fw-bold">Meet the Team</h2>
+        <p class="text-black-50 mb-5">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos laborum
+          quis repellat, similique et quisquam ducimus? Animi mollitia dolorum,
+          id facilis explicabo atque voluptas, quasi, deserunt quo molestias
+          doloremque! Adipisci.
+        </p>
+        <div class="row">
+          <div class="col-md-6 col-lg-3">
+            <div class="team bg-white">
+              <img class="img-fluid" src="./imgs/team-1.png" alt="" />
+              <h4 class="text-light p-3">Luke Skywalker</h4>
+              <blockquote class="text-black-50 p-3">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Pariatur, similique.
+              </blockquote>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <div class="team bg-white">
+              <img class="img-fluid" src="./imgs/team-2.png" alt="" />
+              <h4 class="text-light p-3">Luke Skywalker</h4>
+              <blockquote class="text-black-50 p-3">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Pariatur, similique.
+              </blockquote>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <div class="team bg-white">
+              <img class="img-fluid" src="./imgs/team-3.png" alt="" />
+              <h4 class="text-light p-3">Luke Skywalker</h4>
+              <blockquote class="text-black-50 p-3">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Pariatur, similique.
+              </blockquote>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <div class="team bg-white">
+              <img class="img-fluid" src="./imgs/team-4.png" alt="" />
+              <h4 class="text-light p-3">Luke Skywalker</h4>
+              <blockquote class="text-black-50 p-3">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Pariatur, similique.
+              </blockquote>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Our Team -->
     <script src="./js/bootstrap.bundle.min.js"></script>
     <script src="./js/all.min.js"></script>
   </body>
