techs and project

--- a/index.html
+++ b/index.html
@@ -296,6 +296,47 @@
       </div>
     </section>
     <!-- End Our Team -->
+    <!-- Start Techs -->
+    <section class="techs py-5 text-center">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-sm-6 col-md-4 col-lg-2 my-3">
+            <img class="img-fluid" src="./imgs/tech-1.png" alt="" />
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-2 my-3">
+            <img class="img-fluid" src="./imgs/tech-2.png" alt="" />
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-2 my-3">
+            <img class="img-fluid" src="./imgs/tech-3.png" alt="" />
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-2 my-3">
+            <img class="img-fluid" src="./imgs/tech-4.png" alt="" />
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-2 my-3">
+            <img class="img-fluid" src="./imgs/tech-1.png" alt="" />
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-2 my-3">
+            <img class="img-fluid" src="./imgs/tech-2.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Techs -->
+
+    <!-- Start Project-->
+    <section class="project text-center py-5 text-light">
+      <h2>Start Your Project</h2>
+      <p class="text-white-50">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequuntur
+        illo iure ut soluta voluptates voluptate.
+      </p>
+      <div class="d-flex justify-content-center my-5">
+        <a href="#" class="btn main-btn rounded-pill text-uppercase">
+          Start Project</a
+        >
+      </div>
+    </section>
+    <!-- End Project-->
     <script src="./js/bootstrap.bundle.min.js"></script>
     <script src="./js/all.min.js"></script>
   </body>
