--- a/index.html
+++ b/index.html
@@ -337,6 +337,52 @@
       </div>
     </section>
     <!-- End Project-->
+
+    <!-- Start Blog -->
+    <section class="blog py-5">
+      <div class="container">
+        <div class="main-title py-4 text-center my-5 position-relative">
+          <img class="mb-4" src="./imgs/title.png" alt="" />
+          <h2>Read Our Blog</h2>
+          <p class="text-uppercase text-black-50">New Stories</p>
+        </div>
+        <div class="row">
+          <div class="col-md-6 col-lg-4">
+            <div class="card">
+              <img src="./imgs/blog-1.jpg" class="card-img-top" alt="blog" />
+              <div class="card-body">
+                <span class="text-black-50">Jun 17, 2022</span>
+                <h5 class="card-title">Lorem ipsum dolor sit amet.</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="card">
+              <img src="./imgs/blog-2.jpg" class="card-img-top" alt="blog" />
+              <div class="card-body">
+                <span class="text-black-50">Jun 17, 2022</span>
+                <h5 class="card-title">Lorem ipsum dolor sit amet.</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="card">
+              <img src="./imgs/blog-3.jpg" class="card-img-top" alt="blog" />
+              <div class="card-body">
+                <span class="text-black-50">Jun 17, 2022</span>
+                <h5 class="card-title">Lorem ipsum dolor sit.</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center my-5">
+          <a href="#" class="btn main-btn rounded-pill text-uppercase">
+            More Stories</a
+          >
+        </div>
+      </div>
+    </section>
+    <!-- End Blog -->
     <script src="./js/bootstrap.bundle.min.js"></script>
     <script src="./js/all.min.js"></script>
   </body>
