--- a/index.html
+++ b/index.html
@@ -383,6 +383,30 @@
       </div>
     </section>
     <!-- End Blog -->
+
+    <!-- Start Subscribe -->
+    <section class="subscribe py-5 text-center text-md-start">
+      <div class="container">
+        <form class="row align-items-center">
+          <div class="col-md-6 col-lg-3">
+            <div class="fw-bold fs-5 mb-3">Subscribe to our Newsletter:</div>
+          </div>
+          <div class="col-md-6 col-lg-7 mb-5">
+            <input
+              class="w-100 text-light p-2 bg-transparent"
+              type="text"
+              name=""
+              placeholder="Enter Email Address"
+              id=""
+            />
+          </div>
+          <div class="col-md-6 col-lg-2">
+            <input class="btn rounded-pill" type="submit" value="Subscribe" />
+          </div>
+        </form>
+      </div>
+    </section>
+    <!-- End Subscribe -->
     <script src="./js/bootstrap.bundle.min.js"></script>
     <script src="./js/all.min.js"></script>
   </body>
