--- a/index.html
+++ b/index.html
@@ -407,6 +407,94 @@
       </div>
     </section>
     <!-- End Subscribe -->
+    <!-- Start Footer -->
+    <footer class="py-5 text-white-50 text-center text-md-start">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 col-lg-4">
+            <div class="info mb-5">
+              <img class="mb-3 img-fluid" src="./imgs/logo.png" alt="" />
+              <p class="mb-5">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Quisquam rem aspernatur nihil voluptate velit quo?
+              </p>
+              <div class="copyright">
+                Created by <span>Graphberry</span>
+                <div>&copy; 2022 - <span>Bondi Inc</span></div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-2">
+            <div class="links">
+              <h5 class="text-light">Links</h5>
+              <ul class="list-unstyled lh-lg">
+                <li>Home</li>
+                <li>Our Services</li>
+                <li>Portfolio</li>
+                <li>Testimonials</li>
+                <li>Support</li>
+                <li>Terms and Condition</li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-2">
+            <div class="links">
+              <h5 class="text-light">About Us</h5>
+              <ul class="list-unstyled lh-lg">
+                <li>Sign In</li>
+                <li>Register</li>
+                <li>About Us</li>
+                <li>Blog</li>
+                <li>Contact Us</li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="contact">
+              <h5 class="text-light">Contact Us</h5>
+              <p class="lh-lg mt-3 mb-5">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis,
+                error.
+              </p>
+              <a href="#" class="btn main-btn rounded-pill w-100"
+                >Graphberry@gmail.com</a
+              >
+              <ul class="d-flex list-unstyled mt-5 gap-3">
+                <li>
+                  <a href="" class="d-block text-light">
+                    <i
+                      class="fa-brands fa-facebook fa-lg facebook rounded-circle p-2"
+                    ></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="d-block text-light">
+                    <i
+                      class="fa-brands fa-twitter fa-lg twitter rounded-circle p-2"
+                    ></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="d-block text-light">
+                    <i
+                      class="fa-brands fa-linkedin fa-lg linkedin rounded-circle p-2"
+                    ></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="d-block text-light">
+                    <i
+                      class="fa-brands fa-youtube fa-lg youtube rounded-circle p-2"
+                    ></i>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- End Footer -->
     <script src="./js/bootstrap.bundle.min.js"></script>
     <script src="./js/all.min.js"></script>
   </body>
